# quoteflow-demo

./: .env.example  .env.production.example  .gitattributes  .gitignore  LICENSE  README.md  compose.production.yaml  compose.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: calculations.py  documents.py  health.py
backend/app/core/: calculation.py  errors.py
backend/app/schemas/: calculation.py
backend/app/services/: pdf_document.py
backend/tests/: test_api.py  test_calculation.py  test_pdf_api.py
deploy/nginx/: quoteflow.http.conf  quoteflow.https.conf
docs/: 00_PROJECT_CONTEXT.md  01_PRODUCT_REQUIREMENTS.md  02_ARCHITECTURE.md  03_CALCULATION_MODEL.md  04_DATA_MODEL.md  05_API_CONTRACT.md  06_SECURITY.md  07_ROADMAP.md  08_HANDOFF.md  09_WORKFLOW.md  10_DEPLOYMENT_BEGET.md
fixtures/calculations/: golden.json  invalid.json
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  PrintDocument.test.tsx  styles.css
frontend/src/components/: AppHeader.tsx  DemoNotice.tsx  Field.tsx
frontend/src/features/calculation/: CalculationForm.tsx  ItemsEditor.tsx  PrintDocument.tsx  SummaryPanel.tsx  calculate.test.ts  calculate.ts  editableTypes.ts  errors.ts  inputAdapters.ts  types.ts
frontend/src/features/documents/: pdfClient.test.ts  pdfClient.ts
frontend/src/features/drafts/: DraftsPanel.tsx  draftStorage.ts
(+5 files in other folders)
