[project]
name = "quoteflow-backend"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.139.2",
  "pydantic==2.13.4",
  "reportlab==5.0.0",
  "uvicorn==0.51.0"
]

[project.optional-dependencies]
test = [
  "httpx==0.28.1",
  "pypdf==6.14.2",
  "pytest==9.1.1"
]

[tool.setuptools.package-data]
app = [
  "assets/fonts/DejaVuSans.ttf",
  "assets/fonts/DejaVuSans-Bold.ttf",
  "assets/fonts/LICENSE"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
